--- a/client/views/view1/view1.html
+++ b/client/views/view1/view1.html
@@ -1,9 +1,5 @@
 <template name="view1">
-  <h1>Horari</h1>
+  <h1>Hello World from view1!</h1>
   {{greeting}}
-  
-  <p>Horarios:
-    Name: <input id="name" type="text" />
-    <input id="button" class="btn btn-primary" type="button" value="Click" />
-  </p>
+  <input class="btn btn-primary" type="button" value="Click" />
 </template>
