--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,5 +1,6 @@
 <template name="home">
-  <h1>Hompage hola kè tal!!!</h1>
+	<body bgcolor="#CC9966" text="#000000">
+  <h1>La botiga dels retocs</h1>
   
   {{#if page "view1"}}
     {{> view1 }}
@@ -8,5 +9,5 @@
   {{else}}
     <p>page not found</p>
   {{/if}}{{/if}}
-  
+  </body>
 </template>
