--- a/client/views/view1/view1.html
+++ b/client/views/view1/view1.html
@@ -12,8 +12,8 @@
   <tbody><tr valign="top"> 
 
     <td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;En <b>la botiga dels retocs</b> es fan arratjaments
-    de roba de tot tipus amb gran artesania i experiencia. El nostre negoci es dedica
-    als retocs grans i petits de la vostra roba, comunions, bateig, informal, etc. 
+    de roba de tot tipus amb gran artesania i experiència. La botiga dels retocs va nèixer fa ara 
+    11 anys, però amb més de 25 anys d'expèriencia en el sector textil. Us hi esperem!  
     </td>
 
     <td width="244" rowspan="2"><img src="/images/lasalle.jpg" width="200" height="163" alt="imagen1"></td>
