--- a/client/views/view2/view2.html
+++ b/client/views/view2/view2.html
@@ -1,43 +1,24 @@
 <template name="view2">
-  <h2>Horaris</h2>
-  <input class="btn btn-success" type="button" value="Pagina principal" />
-  <br/>
- <body bgcolor="#CC9966" text="#000000">
+		
+  	<h2>Horaris</h2>
+  	<input class="btn btn-success" type="button" value="Pagina principal"/>
 
-<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
+  	<body bgcolor="#CC9966" text="#000000">
+	
+	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
+		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;Els horaris de
+			la botiga dels retocs son els següents:
+	    </td>
+	</table>
 
-  <tbody><tr valign="top"> 
+	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
+		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres <b>de 9:00 a 13:00</b> i
+			de <b>15:30 a 19:00 </b> 
+	    </td>
+		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;Els disabtes <b>de 9:00 a 14:30</b>
+	    </td>
+	</table>
+	
+	</body>
 
-    <td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;En <b>la botiga dels retocs</b> disposa dels 				seguents horaris:	
-    </td>
-
-
-    <td width="244" rowspan="2"><img src="/images/cartel.jpg" width="200" height="163" alt="imagen1"></td>
-
-
-  <tr valign="top"> 
-
-    <td rowspan="3" width="200">
-
-	    <img src="/images/salle.jpg" width="200" height="267" alt="imagen3">
-
-	    <br><br>
-			<img src="/images/lasalle.jpg" alt="imagen4" border="0">
-		</a>
-    </td>
-
-    <td width="106"><img src="/images/lasalle.jpg" width="100" height="100" alt="imagen5"></td>
-  </tr>
-
-  <tr valign="top"> 
-    <td colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres de 9:00 fins 13:00 </td>
-	<td colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres de 15:00 fins 19:00 </td>
-  </tr>
-
-</tbody></table>
-
-<script language="JavaScript" type="text/javascript" src="pie.js"></script><hr><center><small><b>La botiga dels retocs - Retocs de roba</b> - Reus - Tarragona - Catalunya <br>665455534 / 977637389 - <a href="mailto:mymail@labotigadelsretocs.com">consulta@labotigadelsretocs.com</a></small></center>
-
-<hr>
-</body> 
 </template>
