--- a/client/views/view2/view2.html
+++ b/client/views/view2/view2.html
@@ -12,11 +12,21 @@
 	</table>
 
 	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
-		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres <b>de 9:00 a 13:00</b> i
+		<td colspan="4"> &nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres <b>de 9:00 a 13:00</b> i
 			de <b>15:30 a 19:00 </b> 
 	    </td>
-		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;Els disabtes <b>de 9:00 a 14:30</b>
+		<td colspan="4"> &nbsp;&nbsp;&nbsp;&nbsp;Els disabtes <b>de 9:00 a 14:30</b>
 	    </td>
+	
+		<td width="244" rowspan="2"><img src="/images/reloj.png" width="800"
+			height="670" alt="imagen1">
+		</td>
+	</table>
+	
+	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
+		<td width="244" rowspan="2"><img src="/images/cartel.jpg" width="800"
+			height="670" alt="imagen1">
+		</td>
 	</table>
 	
 	</body>
