--- a/client/views/view2/view2.html
+++ b/client/views/view2/view2.html
@@ -1,34 +1,14 @@
 <template name="view2">
-		
-  	<h2>Horaris</h2>
-  	<input class="btn btn-success" type="button" value="Pagina principal"/>
-
-  	<body bgcolor="#CC9966" text="#000000">
-	
-	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
-		<td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;Els horaris de
-			la botiga dels retocs son els següents:
-	    </td>
-	</table>
-
-	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
-		<td colspan="4"> &nbsp;&nbsp;&nbsp;&nbsp;De dilluns a divendres <b>de 9:00 a 13:00</b> i
-			de <b>15:30 a 19:00 </b> 
-	    </td>
-		<td colspan="4"> &nbsp;&nbsp;&nbsp;&nbsp;Els disabtes <b>de 9:00 a 14:30</b>
-	    </td>
-	
-		<td width="244" rowspan="2"><img src="/images/reloj.png" width="800"
-			height="670" alt="imagen1">
-		</td>
-	</table>
-	
-	<table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
-		<td width="244" rowspan="2"><img src="/images/cartel.jpg" width="800"
-			height="670" alt="imagen1">
-		</td>
-	</table>
-	
-	</body>
-
+  <h1>Aquestes són les comandes que hi ha : </h1>
+  {{greeting}}
+  <input class="btn btn-success" type="button" value="Torna Enderrera" />
+  <br/>
+  <img src="/images/lasalle.jpg">  
+  
+  <ul>
+    {{#each contact}}
+      <li>Nom: {{name}}</li>
+    {{/each}}
+  </ul>
+  
 </template>
