--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,13 +1,72 @@
 <template name="home">
-	<body bgcolor="#CC9966" text="#000000">
-  <h1>La botiga dels retocs</h1>
+   
+  <h1>La Botiga dels Retocs</h1>
+    <h2>Qui som?</h2>
+    <input id="buto_3" class="btn btn-primary" type="button" value="Horaris" />
+
+  <body bgcolor="#CC9966" text="#000000">
+
+    <table width="600" border="0" cellspacing="5" cellpadding="5" align="center">
+
+        <tbody>
   
-  {{#if page "view1"}}
-    {{> view1 }}
-  {{else}} {{#if page "view2"}}
-    {{> view2 }}
+        <tr valign="top"> 
+          <td colspan="2"> &nbsp;&nbsp;&nbsp;&nbsp;En <b>la botiga dels retocs</b> es fan
+          arratjaments
+          de roba de tot tipus amb gran artesania i experiència. La botiga dels retocs
+          va nèixer fa ara 11 anys, però amb més de 25 anys d'expèriencia en el sector
+          textil. Us hi esperem!  
+          </td>
+        <td width="244" rowspan="2"><img src="/images/cartel.jpg" width="800"
+          height="670" alt="imagen1">
+        </td>
+          </tr>
+
+          <tr valign="top"> 
+
+            <td rowspan="3" width="200">
+              <img src="/images/maquina.jpg" width="200" height="267" alt="imagen3">
+              <br><br>
+          </td>
+            <td width="106"><img src="/images/lasalle.jpg" width="100" height="100"
+            alt="imagen5">
+          </td>
+
+          </tr>
+
+        <tr valign="top"> 
+          <td colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;<b>La botiga dels retocs</b>
+            es un negoci faimiliar, situat a la petita ciutat de Reus, mes
+             concretament a l'avinguda Pere Ceremonios, 16. </td>
+        </tr>
+
+      </tbody>
+      
+    </table>
+
+
+<script language="JavaScript" type="text/javascript" src="pie.js"></script><hr><center><small><b>La botiga dels retocs - Retocs de roba</b> - Reus - Tarragona - Catalunya <br>665455534 / 977637389 - <a href="mailto:mymail@labotigadelsretocs.com">consulta@labotigadelsretocs.com</a></small></center>
+<hr>
+
+
+</body>
+  
+  {{> loginButtons}}
+  
+  {{#if currentUser}}
+  
+    {{#if page "view1"}}
+      {{> view1 }}
+    {{else}} {{#if page "view2"}}
+      {{> view2 }}
+    {{else}}
+      <p>page not found</p>
+    {{/if}}{{/if}}
+  
+    <input id="contacts" class="btn btn-primary" type="button" value="Busca una Comanda" />
+  
   {{else}}
-    <p>page not found</p>
-  {{/if}}{{/if}}
-  </body>
+    <h3>Has d'estar logejat per poder tenir accés a les comandes</h3>  
+  {{/if}}
+  
 </template>
